# boyboy

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xyz/velvetmilk/boyboyemulator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bboycore.cpp  bboycore.hpp
app/src/main/cpp/core/: CMakeLists.txt  bboycore.cpp
app/src/main/cpp/libs/: CMakeLists.txt
app/src/main/cpp/libs/glm/: CMakeLists.txt
app/src/main/cpp/shapes/: CMakeLists.txt  Circle.cpp  Circle.hpp  Object.cpp  Object.hpp  Vector3.hpp
app/src/main/cpp/source/: CMakeLists.txt
app/src/main/cpp/source/core/: CMakeLists.txt  bboycore.cpp  bboycore.hpp
app/src/main/cpp/source/shapes/: AABB.cpp  AABB.hpp  CMakeLists.txt  Circle.cpp  Object.cpp  Object.hpp
app/src/main/cpp/source/tools/: tools.cpp  tools.hpp
app/src/main/cpp/tools/: CMakeLists.txt  tools.cpp  tools.hpp
app/src/main/java/xyz/velvetmilk/boyboyemulator/: BBoyApp.kt  BBoyFPS.kt  BBoyFPSRunner.kt  BBoyGLSurfaceView.kt  BBoyGameEngineInterface.kt  BBoyInputEvent.kt  BBoyJNILib.kt  BBoyPosRunner.kt  BBoyServiceProvider.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/xyz/velvetmilk/boyboyemulator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
